--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@
 .image-one{
   background-image: url("images/phone-2.a0e481df3d808370cf1d.jpg");
   background-attachment: fixed;
+  overflow: scroll;
 }
 .btn-warning{
 	border-radius: 30px;
@@ -67,7 +68,7 @@
     font-size: 1.5rem;
 }
 .futter{
-	margin: 5% auto;
+	margin: 5% auto 0px;
 }
 .col-1{
 	display: flex;
@@ -83,4 +84,12 @@ h5{
 	justify-content: justify;
 	width:30%;
 	font-size: 1rem;
+}
+form{
+	border-radius: 35px;
+	border: 1px solid black 
+}
+form input{
+	position: relative;
+	z-index: -1;
 }
