--- a/index.css
+++ b/index.css
@@ -21,6 +21,13 @@
 	font-size: 2.5rem;
     max-width: 45%;
 }
+
+.display-4{
+	color: #727277;
+	
+
+}
+
 .image-one{
   background-image: url("images/phone-2.a0e481df3d808370cf1d.jpg");
 }
@@ -31,14 +38,14 @@
 .img-attachmet{
 	background-attachment: fixed;
 	background-size: 110%;
-	height: 600px;
+	height: 500px;
 	margin: 0px auto;
 	width: 100%;
 
 }
 .btn-warning{
 	border-radius: 30px;
-	border: 3px solid black;
+	border: 3px solid white;
 	width: 85%;
 	margin-top: 20%;
 	color: white;
@@ -104,6 +111,10 @@ form input{
 	z-index: -1;
 }
 .content{
-	margin-top: 15%;
+	margin: 8% auto 5% auto;
+
+}
+.content-2{
+	margin-top: 8%;
 	color: white;
 }
